crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__block_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/block_node.rb
---
****FORMATTED****
[1, 2, 3].each{ |i| puts(i) }
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10].each{
  |i|
  puts(i)
  puts(i.+(1))
  puts(i.+(2))
}

****AST****
ProgramNode: "[1, 2, 3].each { |i| puts i }\n[1, 2, 3, 4, 5, 6, 7, 8, 9, 10].each { |i|\n  puts i\n  puts i + 1\n  puts i + 2\n}"
__CallNode: "[1, 2, 3].each { |i| puts i }"
____ArrayNode: "[1, 2, 3]"
______IntegerNode: "1"
______IntegerNode: "2"
______IntegerNode: "3"
____BlockNode: "{ |i| puts i }"
______BlockParametersNode: "|i|"
________RequiredParameterNode: "i"
______StatementsNode: "puts i"
________CallNode: "puts i"
__________LocalVariableReadNode: "i"
__CallNode: "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10].each { |i|\n  puts i\n  puts i + 1\n  puts i + 2\n}"
____ArrayNode: "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
______IntegerNode: "1"
______IntegerNode: "2"
______IntegerNode: "3"
______IntegerNode: "4"
______IntegerNode: "5"
______IntegerNode: "6"
______IntegerNode: "7"
______IntegerNode: "8"
______IntegerNode: "9"
______IntegerNode: "10"
____BlockNode: "{ |i|\n  puts i\n  puts i + 1\n  puts i + 2\n}"
______BlockParametersNode: "|i|"
________RequiredParameterNode: "i"
______StatementsNode: "puts i\n  puts i + 1\n  puts i + 2"
________CallNode: "puts i"
__________LocalVariableReadNode: "i"
________CallNode: "puts i + 1"
__________CallNode: "i + 1"
____________LocalVariableReadNode: "i"
____________IntegerNode: "1"
________CallNode: "puts i + 2"
__________CallNode: "i + 2"
____________LocalVariableReadNode: "i"
____________IntegerNode: "2"
