crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__block_parameters_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/block_parameters_node.rb
---
->(a, b = 1; local) {  }
foo{ |a, b = 1; local| }
