crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__call_operator_write_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/call_operator_write_node.rb
---
****FORMATTED****
foo.bar += baz

****AST****
ProgramNode: "foo.bar += baz"
__CallOperatorWriteNode: "foo.bar += baz"
____CallNode: "foo"
____CallNode: "baz"
