crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__call_or_write_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/call_or_write_node.rb
---
****FORMATTED****
foo.bar ||= value

****AST****
ProgramNode: "foo.bar ||= value"
__CallOrWriteNode: "foo.bar ||= value"
____CallNode: "foo"
____CallNode: "value"
