crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__capture_pattern_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 509
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/capture_pattern_node.rb
---
****FORMATTED****
foo => [baz => bar]

****AST****
ProgramNode: "foo => [bar => baz]"
__MatchRequiredNode: "foo => [bar => baz]"
____CallNode: "foo"
____ArrayPatternNode: "[bar => baz]"
______CapturePatternNode: "bar => baz"
________LocalVariableTargetNode: "bar"
