crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@node__case_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 9
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node/case_node.rb
---
case true
when false
end
case true
when false
  puts(false)
end
